--- a/WpfDay_1/MainWindow.xaml
+++ b/WpfDay_1/MainWindow.xaml
@@ -1,8 +1,51 @@
 ﻿<Window x:Class="WpfDay_1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:WpfDay_1"
-       
-        Title="Day 1 Lab" Height="450" Width="800">
-    <Button Width="120" Height="60">Click me!</Button>
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"      
+        Title="Panels Application" Height="450" Width="800">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Border Padding="20">
+            <StackPanel >
+                <Label FontWeight="Bold" Margin="0 0 0 7" Content="First Name"  ></Label>
+                <Label FontWeight="Bold" Margin="0 0 0 7" Content="Last Name"></Label>
+                <Label FontWeight="Bold" Margin="0 0 0 7" Content="Gender"></Label>
+                <Label FontWeight="Bold" Margin="0 0 0 7" Content="Address" ></Label>
+                <Label FontWeight="Bold" Margin="0 0 0 7" Content="Phone" ></Label>
+                <Label FontWeight="Bold" Margin="0 0 0 7" Content="Mobile"></Label>
+                <Label FontWeight="Bold" Margin="0 0 0 7" Content="Email" ></Label>
+                <Label FontWeight="Bold" Margin="0 0 0 7" Content="Job Title" ></Label>
+            </StackPanel>
+        </Border>
+        <Border Padding="20" Grid.Column="1">
+            <StackPanel  >
+                <TextBox  Padding="3"  Margin="0 0 0 10" x:Name="first_name"></TextBox>
+                <TextBox  Padding="3" Margin="0 0 0 10" x:Name="last_name"></TextBox>
+                <TextBox  Padding="3" Margin="0 0 0 10" x:Name="gender"></TextBox>
+                <TextBox  Padding="3" Margin="0 0 0 10" x:Name="address"></TextBox>
+                <TextBox  Padding="3" Margin="0 0 0 10" x:Name="phone"></TextBox>
+                <TextBox  Padding="3" Margin="0 0 0 10" x:Name="mobile"></TextBox>
+                <TextBox  Padding="3" Margin="0,0,0,10" x:Name="email"></TextBox>
+                <TextBox  Padding="3" Margin="0 0 0 10" x:Name="job_title"></TextBox>
+            </StackPanel>
+        </Border>
+
+        <Border Grid.Row="1" Grid.ColumnSpan="2" Padding="20 0" VerticalAlignment="Top">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Content="Ok" Width="70" Height="30" Margin="0 0 20 0" Background="#FF3F3E3E" Foreground="White" FontWeight="Bold" FontSize="14" BorderBrush="#FF3F3E3E"/>
+                <Button Content="Cancel" Width="70" Height="30" Margin="0 0 20 0" Background="#FF3F3E3E" Foreground="White" FontWeight="Bold" FontSize="14" BorderBrush="#FF3F3E3E"/>
+                <Button Content="Close" Width="70" Height="30" Margin="0 0 20 0" Background="#FF3F3E3E" Foreground="White" FontWeight="Bold" FontSize="14" BorderBrush="#FF3F3E3E">
+
+                </Button>
+
+            </StackPanel>
+        </Border>
+        
+    </Grid>
 </Window>
